5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1836_1277.log
== TEST (2019-06-25 16:54:09) 
-- CODE:
from numpy import *
from numpy.linalg import *         
n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	v[i]=aux+111
	
for j in range(7):
	if(n == v[i]):
		n = i
	if(n2 = v[i]):
		n2=i
		
print(mat[n,n2])

-- ERROR:
File "XXXX", line 15
    if(n2 = v[i]):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:54:19) 
-- CODE:
from numpy import *
from numpy.linalg import *         
n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	v[i]=aux+111
	
for j in range(7):
	if(n == v[i]):
		n = i
	if(n2 == v[i]):
		n2=i
		
print(mat[n,n2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:54:41) 
-- CODE:
from numpy import *
from numpy.linalg import *         
n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	
for j in range(7):
	if(n == v[i]):
		n = i
	if(n2 == v[i]):
		n2=i
		
print(mat[n,n2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:54:53) 
-- CODE:
from numpy import *
from numpy.linalg import *         
n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	
for j in range(7):
	if(n == vet[i]):
		n = i
	if(n2 == vet[i]):
		n2=i
		
print(mat[n,n2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:55:54) 
-- CODE:
from numpy import *
from numpy.linalg import *         
n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	
for j in range(7):
	if(n == vet[j]):
		n = j
	if(n2 == vet[j]):
		n2=j
		
print(mat[n,n2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:55:59) 
-- CODE:
from numpy import *
from numpy.linalg import *         
n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	
for j in range(7):
	if(n == vet[j]):
		n = j
	if(n2 == vet[j]):
		n2=j
		
print(mat[n,n2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:56:57) 
-- CODE:
from numpy import *
from numpy.linalg import *         
n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	
for j in range(size(vet)):
	if(n == vet[j]):
		n = j
	if(n2 == vet[j]):
		n2=j
		
print(mat[n,n2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:57:43) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	
for j in range(size(vet)):
	if(n == vet[j]):
		n = j
		print("hdlfbvsdlhglghdf")
	if(n2 == vet[j]):
		n2=j
		
print(mat[n,n2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:57:55) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	
for j in range(size(vet)):
	if(n == vet[j]):
		n = j
		print("hdlfbvsdlhglghdf")
	if(n2 == vet[j]):
		n2=j
		
print(mat[n,n2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:58:59) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	
for j in range(size(vet)):
	if(n == vet[j]):
		a = j
		
	if(n2 == vet[j]):
		b=j
		
print(mat[a,b])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:59:20) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=0
b=0
aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	
for j in range(size(vet)):
	if(n == vet[j]):
		a = j
		
	if(n2 == vet[j]):
		b=j
		
print(mat[a,b])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:00:19) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=0
b=0
aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	

for i in range(size(vet)):
	if(n == vet[i]):
		a = i
	if(n2 == vet[i]):
		b=i
		
print(mat[a,b])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:00:28) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=0
b=0
aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	

for i in range(size(vet)):
	if(n == vet[i]):
		a = i
	if(n2 == vet[i]):
		b=i
		
print(mat[a,b])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:00:42) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	

for i in range(size(vet)):
	if(n == vet[i]):
		a = i
	if(n2 == vet[i]):
		b=i
		
print(mat[a,b])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:02:36) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=0
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux+111
	


print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:03:15) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	


print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:03:51) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111

for i in range(7):
	if(n == vet[i]):
		a = i
	if(n2 == vet[i]):
		b=i
		
print(mat[a,b])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 17:04:02) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111

for i in range(7):
	if(n == vet[i]):
		a = i
	if(n2 == vet[i]):
		b=i
		
print(mat[a,b])

-- EXECUTION TIME:
0.706308
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
